--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "readline": "^1.3.0"
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
+    "readline": "^1.3.0",
+    "sharp": "^0.32.6"
+  },
+  "devDependencies": {
+    "prettier": "^3.1.0"
   }
 }
