--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "sharp": "^0.32.6"
   },
   "devDependencies": {
+    "nodemon": "^3.0.1",
     "prettier": "^3.1.0"
   }
 }
