--- a/package.json
+++ b/package.json
@@ -3,17 +3,23 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "app": "node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^5.3.0",
     "express": "^4.18.2",
+    "inquirer": "^9.2.12",
+    "inquirer-file-tree-selection-prompt": "^2.0.5",
     "multer": "^1.4.5-lts.1",
+    "os": "^0.1.2",
     "path": "^0.12.7",
     "readline": "^1.3.0",
     "sharp": "^0.32.6"
