--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node api/index.js",
+    "dev": "nodemon api/index.js",
     "app": "node app.js"
   },
   "keywords": [],
@@ -18,7 +18,9 @@
     "express": "^4.18.2",
     "inquirer": "^9.2.12",
     "inquirer-file-tree-selection-prompt": "^2.0.5",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "os": "^0.1.2",
     "path": "^0.12.7",
     "readline": "^1.3.0",
