--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "chalk": "^5.3.0",
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
     "inquirer": "^9.2.12",
     "inquirer-file-tree-selection-prompt": "^2.0.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "node-fetch": "^3.3.2",
     "os": "^0.1.2",
     "path": "^0.12.7",
     "readline": "^1.3.0",
