Create app directory

--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "kck",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "api/index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node api/index.js",
     "dev": "nodemon api/index.js",
-    "app": "node app.js"
+    "app": "node app/index.js"
   },
   "keywords": [],
   "author": "",
