--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "chalk": "^5.3.0",
+    "chartscii": "^1.3.2",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
     "inquirer": "^9.2.12",
